1.1.6:
	- Include document notes in searches
	- Plugin interface: add bibtex_to_fields utility function, 
	  add print_bibtex method to PythonDocument
	- Docbook manual (Mario Blätterman)
	- UI tweaks (Kai Willadsen, Bugs 297081, 297079)

1.1.5:
	- Change 'keywords' to 'tags' in bibtex export
	- Add DOI entry to document properties (Andreas Dalsgaard)
	- Add menu item for selecting sort mode
	- Mark library as dirty when executing plugin action
	- Fix crash when tagging (Bug 258780)

1.1.4:
	- Fix python get_filename and set_filename (Bug 258103)
	- Fix import of 'series' field in bibtex InProceedings (Bug 255815)
	- Fix escaping URLs in crossref plugin (Bug 246421)
	- Fix exceptions with exotic characters on latin1 systems
	- Fix out of date tag action strings (Bug 247557)
	- Fix crashing on opening docs with keybaord (Bug 235270)

1.1.3:
	- Annotation support (Charlotte Curtis)
	- Support import of UTF8 bibtex (Bug 223763, Sergey B Kirpichev's patch)
	- Fix detection of crossref query failure
	- Fix crash in crossref parsing (Bug 222340)
	- Fix crash in bibtex import (Bug 217866)
	- Fix failing to set fields in list view (Bug 208184)

1.1.2:
	- Remove tooltips on old GTK versions
	- Report errors when a plugin cannot be enabled
	- Updated translations
	- Shortcut buttons on document icons
	- Fix using old tooltip code even with recent GTK
	- UI for attaching tags during adding files
	- Pubmed: fill out DOI field, use full first names (Aurélien Naldi)
	- Search searches all fields (Bug 198671)
	- Revised tagging UI
	- Expand plugin API
	- Unbreak sorting in list view (Bug 202188)
1.1.1:
	- Updated Russian translation (Sergey Kirpichev)
	- Updated simplified Chinese translation (Zhi-Wei Huang)
	- Updated Danish translation (Andreas Dalsgaard)
	- Fix parsing data-less elements in pubmed plugin (Bug 196174)
	- Fix paste in document properties (Bug 195819)
	- Fix add doc with ID dialog