@@ -1,4 +1,5 @@
 1.1.6:
+	- Prevent creation of duplicate tag names (Bug 339593)
 	- Include document notes in searches
 	- Plugin interface: add bibtex_to_fields utility function, 
 	  add print_bibtex method to PythonDocument
